--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,6 @@ main {
 
   background-color: rgba(255, 255, 255, 0.5);
   border-radius: 0px 0px 16px 16px;
-  margin-top: -25px;
 
   box-shadow: 0px 5px rgba(0, 0, 0, 0.2);
   
@@ -100,4 +99,27 @@ main {
   font-size: 48px;
   font-weight: 700;
   text-shadow: 3px 3px rgba(50, 50, 70, 0.5);
+}
+
+.dummy{
+  color: rgb(236, 20, 20);
+  font-size: 48px;
+  font-weight: 700;
+  margin: 20px;
+  text-shadow: 3px 3px rgba(50, 50, 70, 0.5);
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+}
+.dummy2{
+  color: rgb(233, 206, 206);
+  font-size: 68px;
+  font-weight: 700;
+  text-shadow: 3px 3px rgba(50, 50, 70, 0.5);
+  display: flex;
+  align-items: center;
+  margin-top: 20px;
+  text-align: center;
+  justify-content: center;
 }
